--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -22,14 +22,11 @@
 
 #results td:first-child {
   border-right: 2px solid rgb(194, 196, 198);
-
 }
 
 #results td:first-child{
   background-color: #f2f2f2;
 }
-
-/* #results tr:nth-child(even){background-color: #f2f2f2;} */
 
 #results tr:hover {background-color: #ddd;}
 
@@ -40,13 +37,15 @@
   background-color: rgb(24, 47, 124);
   color: white;
 }
+
 .break {
-  background-color: #ddd;
+  background-color: white;
   width: 100%;
   height: 3px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 5rem;
+  margin-bottom: 5px;
 }
+
 .resultHeadings {
   align-content: left;
 }
